@@ -1,3 +1,7 @@
+Clint Adams
+	schizo@debian.org--2004-primary/arch-perl-debian--debian
+		Debian packages.
+
 Enno Cramer
 	uebergeek@web.de--2003/arch-perl--devel
 		One of the main developers.
